pagination for GetValueForOwner
